--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -110,9 +110,9 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="advancedButton">
+           <widget class="QPushButton" name="settingsButton">
             <property name="text">
-             <string>Advanced Settings</string>
+             <string>MIDI Settings</string>
             </property>
            </widget>
           </item>
