--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -105,7 +105,7 @@
           <item>
            <widget class="QPushButton" name="refresh">
             <property name="text">
-             <string>Refresh devices</string>
+             <string>Refresh Devices</string>
             </property>
            </widget>
           </item>
@@ -142,7 +142,7 @@
           <item>
            <widget class="QPushButton" name="donateButton">
             <property name="text">
-             <string>Make a Donation</string>
+             <string>Donate</string>
             </property>
            </widget>
           </item>
